...
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="-10dp"
            android:src="@drawable/ic_warning"
            android:background="@drawable/bg_spam_indicator_circle"
            android:padding="3dp"
            android:visibility="gone"
            android:contentDescription="Contains spam" />

        <ImageView
            android:id="@+id/thread_avatar_selection_icon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
...
